# calculadora_de_cv

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
calculadora_de_cv/: admin.py  apps.py  calcs.py  forms.py  models.py  serializers.py  urls.py  views.py
calculadora_de_cv/migrations/: 0001_initial.py  0002_artefato_dano_critico_artefato_taxa_critica_and_more.py
calculadora_de_cv/templates/: home.html
config/: settings.py  urls.py
